syntax = "proto3";

option java_package = "grpc";
option java_outer_classname = "TrainingProto";

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service TrainingService{
  rpc saveTraining (SaveRequest) returns (google.protobuf.Empty);
  rpc getTrainings(TrainingsRequest) returns (TrainingsResponse);
}

message Training {
  oneof training_type {
    Yoga yoga = 1;
    Jogging jogging = 2;
  }
}

message Yoga {
  google.protobuf.Timestamp date = 1;
  google.protobuf.Duration duration = 2;
}

message Jogging {
  google.protobuf.Timestamp date = 1;
  google.protobuf.Duration duration = 2;
  int32 distance = 3;
}

message SaveRequest {
  string login = 1;
  string password = 2;
  Training training = 3;
}

message TrainingsRequest{
  string login = 1;
  string password = 2;
  google.protobuf.Timestamp date = 3;
}

message TrainingsResponse{
  repeated Training trainings = 1;
}